# SKYTRACK

./: LICENSE  README.md
DroneVoxelServer/: .gitignore  CMakeLists.txt  pyproject.toml
DroneVoxelServer/docs/: SPEC.md
DroneVoxelServer/scripts/: run_dev.sh  run_media_server.sh
apps/viewer/: index.html  start.sh  tailwind.config.js  tsconfig.json  vite.config.ts
apps/viewer/src/: App.tsx  index.css
apps/viewer/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
apps/viewer/src/pages/: Calibration.tsx  Dashboard.tsx  Operations.tsx  Settings.tsx  SiteConfiguration.tsx  Tracking.tsx
apps/viewer/src/stores/: authStore.ts  themeStore.ts
configs/: media-server.example.yaml  site.example.yaml
docs/: GUI-SPEC.md
